add_executable(EX1_02 ex1_02.cpp)
add_executable(EX1_03 ex1_03.cpp)
add_executable(EX1_04 ex1_04.cpp)
add_executable(EX1_05 ex1_05.cpp)
add_executable(EX1_09 ex1_09.cpp)
add_executable(EX1_10 ex1_10.cpp)
add_executable(EX1_11 ex1_11.cpp)
add_executable(EX1_12 ex1_12.cpp)
add_executable(EX1_13_09 ex1_13_09.cpp)
add_executable(EX1_13_10 ex1_13_10.cpp)
add_executable(EX1_13_11 ex1_13_11.cpp)
add_executable(EX1_15 ex1_15.cpp)
add_executable(EX1_16 ex1_16.cpp)
add_executable(EX1_17 ex1_17.cpp)
add_executable(EX1_20 ex1_20.cpp)
add_executable(EX1_21 ex1_21.cpp)
add_executable(EX1_22 ex1_22.cpp)
add_executable(EX1_23 ex1_23.cpp)
