add_executable(EX2_04 ex2_04.cpp)
add_executable(EX2_08 ex2_08.cpp)
add_executable(EX2_10 ex2_10.cpp)
add_executable(EX2_13 ex2_13.cpp)
add_executable(EX2_14 ex2_14.cpp)
add_executable(EX2_18 ex2_18.cpp)
add_executable(EX2_20 ex2_20.cpp)
add_executable(EX2_34 ex2_34.cpp)
add_executable(EX2_35 ex2_35.cpp)
add_executable(EX2_36 ex2_36.cpp)
add_executable(EX2_41_1 ex2_41_1.cpp)
add_executable(EX2_41_2 ex2_41_2.cpp)
add_executable(EX2_41_3 ex2_41_3.cpp)
add_executable(EX2_42_1 ex2_42_1.cpp)
add_executable(EX2_42_2 ex2_42_2.cpp)
add_executable(EX2_42_3 ex2_42_3.cpp)
