add_executable(EX3_01_1 ex3_01_1.cpp)
add_executable(EX3_01_2 ex3_01_2.cpp)
add_executable(EX3_02_1 ex3_02_1.cpp)
add_executable(EX3_02_2 ex3_02_2.cpp)
add_executable(EX3_04_1 ex3_04_1.cpp)
add_executable(EX3_04_2 ex3_04_2.cpp)
add_executable(EX3_05 ex3_05.cpp)
add_executable(EX3_06 ex3_06.cpp)
add_executable(EX3_07 ex3_07.cpp)
add_executable(EX3_08 ex3_08.cpp)
add_executable(EX3_09 ex3_09.cpp)
add_executable(EX3_10 ex3_10.cpp)
add_executable(EX3_14 ex3_14.cpp)
add_executable(EX3_15 ex3_15.cpp)
add_executable(EX3_16 ex3_16.cpp)
add_executable(EX3_17 ex3_17.cpp)
add_executable(EX3_20_1 ex3_20_1.cpp)
add_executable(EX3_20_2 ex3_20_2.cpp)
add_executable(EX3_21 ex3_21.cpp)
add_executable(EX3_22 ex3_22.cpp)
add_executable(EX3_23 ex3_23.cpp)
add_executable(EX3_24 ex3_24.cpp)
add_executable(EX3_25 ex3_25.cpp)
add_executable(EX3_31 ex3_31.cpp)
add_executable(EX3_32 ex3_32.cpp)
add_executable(EX3_35 ex3_35.cpp)
add_executable(EX3_36 ex3_36.cpp)
add_executable(EX3_39 ex3_39.cpp)
add_executable(EX3_40 ex3_40.cpp)
add_executable(EX3_41 ex3_41.cpp)
add_executable(EX3_42 ex3_42.cpp)
add_executable(EX3_43 ex3_43.cpp)
add_executable(EX3_44 ex3_44.cpp)
add_executable(EX3_45 ex3_45.cpp)