include_directories(${PRIMER}/ch01)
include_directories(${PRIMER}/ch07)

add_executable(EX10_01 ex10_01.cpp)
add_executable(EX10_02 ex10_02.cpp)
add_executable(EX10_03 ex10_03.cpp)
add_executable(EX10_04 ex10_04.cpp)
add_executable(EX10_05 ex10_05.cpp)
add_executable(EX10_06 ex10_06.cpp)
add_executable(EX10_09 ex10_09.cpp)
add_executable(EX10_11 ex10_11.cpp)
add_executable(EX10_12 ex10_12.cpp)
add_executable(EX10_13 ex10_13.cpp)
add_executable(EX10_16 ex10_16.cpp)
add_executable(EX10_17 ex10_17.cpp)
add_executable(EX10_18 ex10_18.cpp)
add_executable(EX10_19 ex10_19.cpp)
add_executable(EX10_20 ex10_20.cpp)
add_executable(EX10_21 ex10_21.cpp)
add_executable(EX10_22 ex10_22.cpp)
add_executable(EX10_24 ex10_24.cpp)
add_executable(EX10_25 ex10_25.cpp)
add_executable(EX10_27 ex10_27.cpp)
add_executable(EX10_28 ex10_28.cpp)
add_executable(EX10_29 ex10_29.cpp)
file(COPY ${PROJECT_SOURCE_DIR}/primer/ch10/ex8_4.txt
     DESTINATION ${PROJECT_BINARY_DIR}/primer/ch10/)
add_executable(EX10_30 ex10_30.cpp)
add_executable(EX10_31 ex10_31.cpp)
add_executable(EX10_32 ex10_32.cpp)
add_executable(EX10_33 ex10_33.cpp)
file(COPY ${PROJECT_SOURCE_DIR}/primer/ch10/num.txt
     DESTINATION ${PROJECT_BINARY_DIR}/primer/ch10/)
add_executable(EX10_34 ex10_34.cpp)
add_executable(EX10_35 ex10_35.cpp)
add_executable(EX10_36 ex10_36.cpp)
add_executable(EX10_37 ex10_37.cpp)
add_executable(EX10_42 ex10_42.cpp)