add_executable(EX5_05 ex5_05.cpp)
add_executable(EX5_06 ex5_06.cpp)
add_executable(EX5_09 ex5_09.cpp)
add_executable(EX5_10 ex5_10.cpp)
add_executable(EX5_11 ex5_11.cpp)
add_executable(EX5_12 ex5_12.cpp)
add_executable(EX5_14 ex5_14.cpp)
add_executable(EX5_17 ex5_17.cpp)
add_executable(EX5_19 ex5_19.cpp)
add_executable(EX5_20 ex5_20.cpp)
add_executable(EX5_21 ex5_21.cpp)
add_executable(EX5_23 ex5_23.cpp)
add_executable(EX5_24 ex5_24.cpp)
add_executable(EX5_25 ex5_25.cpp)
