add_executable(EX6_03 ex6_03.cpp)
add_executable(EX6_04 ex6_04.cpp)
add_executable(EX6_07 ex6_07.cpp)
add_executable(EX6_09 factMain.cc fact.cc ex6_05.cpp)
add_executable(EX6_10 ex6_10.cpp)
add_executable(EX6_11 ex6_11.cpp)
add_executable(EX6_12 ex6_12.cpp)
add_executable(EX6_17 ex6_17.cpp)
add_executable(EX6_21 ex6_21.cpp)
add_executable(EX6_22 ex6_22.cpp)
add_executable(EX6_23 ex6_23.cpp)
add_executable(EX6_25 ex6_25.cpp)
add_executable(EX6_27 ex6_27.cpp)
add_executable(EX6_33 ex6_33.cpp)
add_executable(EX6_42 ex6_42.cpp)
add_executable(EX6_47 ex6_47.cpp)
target_compile_options(EX6_47 PRIVATE -D NDEBUG)
add_executable(EX6_51 ex6_51.cpp)
add_executable(EX6_55 ex6_55.cpp)
