add_executable(EX9_13 ex9_13.cpp)
add_executable(EX9_14 ex9_14.cpp)
add_executable(EX9_15 ex9_15.cpp)
add_executable(EX9_18 ex9_18.cpp)
add_executable(EX9_19 ex9_19.cpp)
add_executable(EX9_20 ex9_20.cpp)
add_executable(EX9_24 ex9_24.cpp)
add_executable(EX9_26 ex9_26.cpp)
add_executable(EX9_27 ex9_27.cpp)
add_executable(EX9_28 ex9_28.cpp)
add_executable(EX9_31_FORWARD_LIST ex9_31_forward_list.cpp)
add_executable(EX9_31_LIST ex9_31_list.cpp)
add_executable(EX9_33 ex9_33.cpp)
add_executable(EX9_34 ex9_34.cpp)
add_executable(EX9_38 ex9_38.cpp)
add_executable(EX9_41 ex9_41.cpp)
add_executable(EX9_43 ex9_43.cpp)
add_executable(EX9_44 ex9_44.cpp)
add_executable(EX9_45 ex9_45.cpp)
add_executable(EX9_46 ex9_46.cpp)
add_executable(EX9_47 ex9_47.cpp)
add_executable(EX9_48 ex9_48.cpp)
add_executable(EX9_49 ex9_49.cpp)
file(COPY ${PROJECT_SOURCE_DIR}/primer/ch09/letter.txt
     DESTINATION ${PROJECT_BINARY_DIR}/primer/ch09/)
add_executable(EX9_50 ex9_50.cpp)
add_executable(EX9_51 ex9_51.cpp)
add_executable(EX9_52a ex9_52a.cpp)
add_executable(EX9_52b ex9_52b.cpp)