add_executable(EX13_13 ex13_13.cpp)
add_executable(EX13_14 ex13_14.cpp)
add_executable(EX13_15 ex13_15.cpp)
add_executable(EX13_16 ex13_16.cpp)
add_executable(EX13_18 ex13_18.cpp)
add_executable(EX13_34 ex13_34_test.cpp ex13_34.cpp)
add_executable(EX13_42 ex13_42.cpp ex13_42_TextQuery.cpp ex13_42_StrVec.cpp)
file(COPY ${PROJECT_SOURCE_DIR}/primer/ch13/storyDataFile.txt
     DESTINATION ${PROJECT_BINARY_DIR}/primer/ch13/)
add_executable(EX13_44 ex13_44_test.cpp ex13_44.cpp)
add_executable(EX13_48 ex13_48.cpp ex13_44.cpp)
add_executable(EX13_49 ex13_49_Message_Test.cpp ex13_49_Message.cpp)
add_executable(EX13_50 ex13_50.cpp ex13_49_String.cpp)
add_executable(EX13_58 ex13_58.cpp)