add_executable(EX14_02 ex14_02_test.cpp ex14_02_sales_data.cpp)
add_executable(EX14_05 ex14_05_test.cpp ex14_05.cpp)
add_executable(EX14_07 ex14_07_test.cpp ex14_07.cpp)
add_executable(EX14_10 ex14_10.cpp ex14_02_sales_data.cpp)
add_executable(EX14_15 ex14_15_test.cpp ex14_15.cpp)
add_executable(EX14_16_StrBlob ex14_16_StrBlob_test.cpp ex14_16_StrBlob.cpp)
add_executable(EX14_16_StrVec ex14_16_StrVecMain.cpp ex14_16_StrVec.cpp)
add_executable(EX14_16_String ex14_16_StringMain.cpp ex14_16_String.cpp)
add_executable(EX14_18_StrBlob ex14_18_StrBlobTest.cpp ex14_18_StrBlob.cpp)
add_executable(EX14_18_StrVec ex14_18_StrVecMain.cpp ex14_18_StrVec.cpp)
add_executable(EX14_18_String ex14_18_StringMain.cpp ex14_18_String.cpp)
add_executable(EX14_22 ex14_22_sales_data_test.cpp ex14_22_sales_data.cpp)
add_executable(EX14_23 ex14_23_TEST.cpp ex14_23.cpp)
add_executable(EX14_24 ex14_24_TEST.cpp ex14_24.cpp)
add_executable(EX14_26_StrBlob ex14_26_StrBlobTest.cpp ex14_26_StrBlob.cpp)
add_executable(EX14_26_StrVec ex14_26_StrVecMain.cpp ex14_26_StrVec.cpp)
add_executable(EX14_26_String ex14_26_StringMain.cpp ex14_26_String.cpp)
add_executable(EX14_27 ex14_27_28_StrBlobTest.cpp ex14_27_28_StrBlob.cpp)
add_executable(EX14_30 ex14_30_StrBlobTest.cpp ex14_30_StrBlob.cpp)
add_executable(EX14_32 ex14_32.cpp ex14_30_StrBlob.cpp)
add_executable(EX14_35 ex14_35.cpp)
add_executable(EX14_36 ex14_36.cpp)
add_executable(EX14_37 ex14_37.cpp)
add_executable(EX14_38_39 ex14_38_39.cpp)
add_executable(EX14_40 ex14_40.cpp)
add_executable(EX14_42 ex14_42.cpp)
add_executable(EX14_43 ex14_43.cpp)
add_executable(EX14_44 ex14_44.cpp)
add_executable(EX14_45 ex14_45_sales_data_test.cpp ex14_45_sales_data.cpp)
add_executable(EX14_49 ex14_49_TEST.cpp ex14_49.cpp)